--- a/src/components/TransactionList.css
+++ b/src/components/TransactionList.css
@@ -1,5 +1,6 @@
 .TransactionList {
   margin-top: 50px;
+  width: 100%;
 }
 
 .TransactionList__placeholderItem {
@@ -10,8 +11,8 @@
   display: flex;
   padding: 20px 40px;
   margin-bottom: 20px;
-  background: #FFFFFF;
-  border: 1px solid #D1D5DB;
+  background: #ffffff;
+  border: 1px solid #d1d5db;
   box-sizing: border-box;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
 }
@@ -22,11 +23,30 @@
 
 .TransactionList__item:hover {
   cursor: pointer;
-  background-color: #F7FFFF;
+  background-color: #f7ffff;
 }
 
 .TransactionList__itemAmount {
   flex: 1;
   text-align: right;
   font-weight: 600;
+}
+
+.Header {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.Content_InputSearch {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 10px;
+}
+
+.InputSearch {
+  padding: 4px 10px;
+  width: 200px;
+  border-radius: 4px;
+  border: 1px solid #d1d5d8;
 }
