--- a/src/styles.css
+++ b/src/styles.css
@@ -39,7 +39,7 @@ yellow-400: #92400E
   font-weight: 600;
   font-size: 16px;
   line-height: 20px;
-  color: #6B7280;
+  color: #6b7280;
 }
 
 .heavyText {
@@ -60,5 +60,5 @@ yellow-400: #92400E
   font-weight: normal;
   font-size: 14px;
   line-height: 20px;
-  color: #6B7280;
+  color: #6b7280;
 }
